--- a/prepros-6.config
+++ b/prepros-6.config
@@ -16,6 +16,8 @@
       "Prepros Export"
     ],
     "hideUnwatchedFiles": false
+    git config --global user.email "james2266088@yahoo.com.tw"
+    git config --global user.name "James009002"
   },
   "imports": [],
   "projectView": {
@@ -243,3 +245,5 @@
   "file-type-png": "{\"compilers\":[\"png\"]}",
   "file-type-jpg": "{\"compilers\":[\"jpg\"]}"
 }
+  
+
